--- a/treino.html
+++ b/treino.html
@@ -64,7 +64,7 @@
 
         <!-- PLANO DE TREINO -->
         <section id="treino" class="mb-8 md:mb-12">
-            <h2 class="text-2xl font-bold text-white mb-4 flex items-center">
+            <h2 class="text-2xl font-bold text-white mb-4 flex items-center">""
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-3 text-emerald-400"><path d="M18 8L22 12L18 16"></path><path d="M6 8L2 12L6 16"></path><path d="M14.5 4L9.5 20"></path></svg>
                 Plano de Treino (5 Dias/Semana)
             </h2>
